refactor: h3 tags extra padding, better readability on pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,8 @@ h1, h2, h3, h4, h5, h6 { font-family: 'Roboto Condensed', sans-serif; }
 
 p, a, li, label, textarea, input, small { font-family: 'Dosis', sans-serif; }
 
+h3 { padding: 2rem 0; }
+
 /*==================================== Styles for Body Scroll Bar ==================================*/
 
 body::-webkit-scrollbar {
