chore: Renamed illustration items to be more descriptive (and accurate)

--- a/src/app/illustration/illustration.component.html
+++ b/src/app/illustration/illustration.component.html
@@ -37,7 +37,7 @@
                 </figcaption>
         </div>
       </section>
-      <h3 class="section-title">BW Doodles</h3>
+      <h3 class="section-title">Doodles</h3>
       <section id="sec-i-doodles" class="collection-container">
         <div id="div_doodle_{{i}}"
             class  = "lbclosed"
@@ -73,7 +73,7 @@
                 </figcaption>
         </div>
       </section>
-      <h3 class="section-title">Color Doodles</h3>
+      <h3 class="section-title">Color Pencil</h3>
       <section id="sec-i-pencils" class="collection-container">
         <div id="div_pencil_{{i}}"
             class  = "lbclosed"
