fix: changed figcaption color from scss variable since variable color changed

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -52,7 +52,7 @@ $fc-color: #48494c;
       position: relative;
       height: 15vh;
       right: 10%;
-      background-color: $ic-color;
+      background-color: #ffffff;
       display: flex;
       flex-flow: row wrap;
       justify-content: center;
