--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -134,10 +134,10 @@ nav>a:active{
   }
 }
 
-nav>a:nth-child(1){ background-image: url('../../assets/images/backgrounds/webdev-background.png'); } //webdev
-nav>a:nth-child(2){ background-image: url('../../assets/images/backgrounds/design-background.png'); } //design
-nav>a:nth-child(3){ background-image: url('../../assets/images/backgrounds/about-background.jpg'); } //about
-nav>a:nth-child(4){ background-image: url('../../assets/images/backgrounds/illustration-background.jpg'); } //illustration
+nav>a:nth-child(1){ background-image: url('/assets/images/backgrounds/webdev-background.png'); } //webdev
+nav>a:nth-child(2){ background-image: url('/assets/images/backgrounds/design-background.png'); } //design
+nav>a:nth-child(3){ background-image: url('/assets/images/backgrounds/about-background.jpg'); } //about
+nav>a:nth-child(4){ background-image: url('/assets/images/backgrounds/illustration-background.jpg'); } //illustration
 
 /*Minor Variance of transitions from opened and closed nav section anchors*/
 nav>a.comic-open{ @include vendor-prefix('transition','height .3s linear, width .3s linear, clip-path .5s ease-in-out'); }
