fix: cursor is pointer for nav anchor tags
without a hash href, links don't show a cursor when hovering
fixed this with a simple css style

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -108,6 +108,7 @@ nav>a{
   background-attachment: fixed;
   background-position: center center;
   text-decoration: none;
+  cursor: pointer;
   span{
     font-size: 10vw;
     font-family: 'Courgette', cursive;
