changed sizing of footer copyright to dynamically shift with viewport width

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -77,7 +77,7 @@ $ic-color: #ffffff;
   a{
     svg{
       width: 14em;
-      max-width: 100%;
+      max-width: 70%;
       float: left;
       padding-left: .3em;
       path{
@@ -113,5 +113,10 @@ $ic-color: #ffffff;
   }
   #social-footer{
     margin: 0 0 3rem 0;
+  }
+}
+@media screen and (max-width: 378px){
+  #copyright{
+    p{ font-size: 7vw; }
   }
 }
