feat: title of myself is random
html file has the figcaption pull a name from an array at index 'num'
num is defined as a random number between 0 and 7, the indexes of the title array.
Random title name is generated and declared as myself

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,7 +14,7 @@
                 data-name="{{profile.show}}" >
       </figure>
       <figcaption>
-        <p>{{profile.title}}</p>
+        <p>{{titles[num]}}</p>
       </figcaption>
     </section>
     <p>What's there to say that hasn't been said? Whenever I describe myself, I ask a lot of questions, such as what aspects of my personality are most valued, can I ever start a narrative without first asking a question, will this sound playful or self demeaning? Playful; it definitely sounds playful.</p>
