fix: Website is more accessible
Renamed #copyright to #copyright-information for screen readers
Updated name in scss files
added Aria-Label to svg file indicating copyright information
added Aria-Labels to footer links that dont' have names, tell readers what the links are for

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <small id="copyright">
     <p id="copyright">&copy;2018</p>
     <a href="http://www.polyentertainment.com" target="_blank">
-      <svg id="company-name" data-name="company-name" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 830 123">
+      <svg id="company-name" data-name="company-name" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 830 123" aria-label="Copyright Poly entertainment">
         <title>poly-entertainment</title>
         <g>
           <g>
@@ -80,11 +80,11 @@
   </small>
   <nav id="social-footer">
       <ul>
-        <li><a href="https://github.com/booellean" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://linkedin.com/in/elle-pope-dev/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="https://booellean.tumblr.com/" target="_blank"><i class="fab fa-tumblr-square"></i></a></li>
-        <li><a href="https://www.instagram.com/booellean/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="https://twitter.com/booellean" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://github.com/booellean" target="_blank" aria-label="github elle pope page"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://linkedin.com/in/elle-pope-dev/" target="_blank" aria-label="linkedin elle pope page"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://booellean.tumblr.com/" target="_blank" aria-label="elle pope tumblr page"><i class="fab fa-tumblr-square"></i></a></li>
+        <li><a href="https://www.instagram.com/booellean/" target="_blank" aria-label="elle pope developer instagram page"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://twitter.com/booellean" target="_blank" aria-label="elle pope developer twitter page"><i class="fab fa-twitter"></i></a></li>
       </ul>
     </nav>
 </footer>
