fix: id name was updated for small tag
The updated name didn't go through properly last time, but all the names in the css file were updated
Thus, the styles weren't taking to the svg copyright information anymore
Fixed the name and all styles are now appropriately applied

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer id="site-footer">
-  <small id="copyright">
-    <p id="copyright">&copy;2018</p>
+  <small id="copyright-information">
+    <p>&copy;2018</p>
     <a href="http://www.polyentertainment.com" target="_blank">
       <svg id="company-name" data-name="company-name" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 830 123" aria-label="Copyright Poly entertainment">
         <title>poly-entertainment</title>
