--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer id="site-footer">
   <small id="copyright-information">
-    <p>&copy;2018</p>
+    <p>&copy;{{year}}</p>
     <a href="http://www.polyentertainment.com" target="_blank">
       <svg id="company-name" data-name="company-name" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 830 123" aria-label="Copyright Poly entertainment">
         <title>poly-entertainment</title>
