--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,7 +16,7 @@
       <figcaption>
         <p>{{titles[num]}}</p>
       </figcaption>
-    </section>
+  </section>
     <p>What's there to say that hasn't been said? Whenever I describe myself, I ask a lot of questions, such as what aspects of my personality are most valued, can I ever start a narrative without first asking a question, will this sound playful or self demeaning? Playful; it definitely sounds playful.</p>
 
     <p>Beyond meta semantics, I'm a developer, video gamer, nature lover, and advocate of LGBTQ+, P.O.C., and neurodiversity inclusion. I believe in community and education; striving to live by those values I push myself to learn and communicate as much as possible. Perhaps important, I believe in the oxford comma.</p>
@@ -25,7 +25,7 @@
 
     <p>Before I came on, NSV had lost their long-term frontend developer, and the organization did not have a direction for UI, application development, or database structure. The other team leads and I were able to redirect the organization's managerial practices and build a solid development team. A big part of my duties include directing our frontend team, analyzing the programmatic and communicative needs of our applications, and overseeing activity on the Azure Portal.</p>
 
-    <p>I also have a partnership business <a href="http://www.polyentertainment.com/" target="_blank">Poly entertainment</a>, which as it's name implies is a multi-faceted media company that values diversity. The mission of Poly entertainment is to fund and distribute any Multimedia Information Systems (as we dub MmISs) that is often overlooked in the eyes of big industry publishers. This content includes but is not limited to communities of LGBTQ+, people of color, and multicultural values. Our goal is to not dictate how this content is delivered, and to provide an environment where understanding and open discussion is valued. This is, of course, a slow process and Poly entertainment will not independently publish for another two years.</p>
+    <p>I also have a partnership business <a href="http://www.polyentertainment.com/" target="_blank">Poly entertainment</a>, which as its name implies is a multi-faceted media company that values diversity. The mission of Poly entertainment is to fund and distribute any Multimedia Information Systems (as we dub MmISs) that is often overlooked in the eyes of big industry publishers. This content includes but is not limited to communities of LGBTQ+, people of color, and multicultural values. Our goal is to not dictate how this content is delivered, and to provide an environment where understanding and open discussion is valued. This is, of course, a slow process and Poly entertainment will not independently publish for another two years.</p>
 
-    <p>Beyond that, I am just a human doing its best like everyone else. I will continue my humanitarian efforts until I'm blue in the face, which will be easy for me beacuase fun fact, I also have <a href="https://wwww.mayoclinic.org/diseases-conditions/raynauds-disease/symptoms-causes/syc-20363571" target="_blank">Raynaud's</a>.</p>
+    <p>Beyond that, I am just a human doing its best like everyone else. I will continue my humanitarian efforts until I'm blue in the face, which will be easy for me because fun fact, I also have <a href="https://www.mayoclinic.org/diseases-conditions/raynauds-disease/symptoms-causes/syc-20363571" target="_blank">Raynaud's</a>.</p>
 </article>
